[project]
name = "cloud"
version = "0.1.0"
description = "Python Implementation of CLOUD"
authors = [
    { name = "KmasaK", email = "155167903+KmasaK@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.3.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud"]
